add daily record e2e test